# Creator-Companion-TUI

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: prerequisites.md
src/: main.rs
src/app/: action.rs  effect.rs  mod.rs  reducer.rs  state.rs
src/events/: mod.rs
src/services/: fs.rs  mod.rs  vpm.rs
src/ui/: mod.rs
src/ui/screens/: add.rs  dashboard.rs  manage.rs  mod.rs  new.rs  project.rs  projects.rs  settings.rs  system.rs
