[package]
name = "vcc-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
crossterm = { version = "0.27.0", features = ["event-stream"] }
directories = "5.0.1"
futures = "0.3.30"
ratatui = "0.26.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
unicode-width = "0.1.13"
